--- a/index.html
+++ b/index.html
@@ -39,5 +39,83 @@
 
       <h1 class="md:hidden"><i class="fa-solid fa-bars text-2xl"></i></h1>
     </nav>
+    <!-- Hero Section -->
+    <section class="relative min-h-screen overflow-hidden">
+      <!-- Background -->
+      <img
+        src="./assets/hero-bg.png"
+        class="absolute inset-0 w-[100%] h-[70%] object-cover opacity-90"
+        alt=""
+      />
+
+      <!-- Circle + Badge -->
+      <div class="relative z-20 flex flex-col items-center pt-16 md:pt-32">
+        <div class="relative">
+          <img
+            src="./assets/hero-circle.png"
+            class="w-[200px] md:w-[330px]"
+            alt=""
+          />
+
+          <!-- NEW badge -->
+          <span
+            class="absolute top-2 right-2 bg-green-500 text-black px-4 py-1 rounded-full font-bold text-sm"
+          >
+            NEW
+          </span>
+
+          <!-- Microphone -->
+          <img
+            src="./assets/microphone.png"
+            class="absolute -bottom-10 right-1/2 translate-x-[120px] md:translate-x-[180px] w-[70px] md:w-[90px]"
+            alt=""
+          />
+        </div>
+
+        <!-- Text -->
+        <div class="text-center mt-12 px-4">
+          <h1 class="text-3xl md:text-[60px] font-extrabold">TechWave</h1>
+
+          <p class="text-sm md:text-xl text-gray-300 max-w-xl mx-auto mt-4">
+            Your daily dose of tech insights, productivity hacks, and personal
+            growth
+          </p>
+
+          <!-- Buttons -->
+          <div class="flex md:flex-row justify-center gap-4 mt-8">
+            <button
+              class="flex items-center gap-2 px-6 py-3 rounded-full text-base md:text-xl bg-gradient-to-r from-[#F7E93F] via-[#FB09B4] to-[#9100F8] font-semibold"
+            >
+              <img src="./assets/spotify.png" alt="" />
+              Listen on Spotify
+            </button>
+
+            <button
+              class="flex items-center gap-2 px-6 py-3 rounded-full text-base md:text-xl border border-[#00FF88] text-[#00FF88] font-semibold"
+            >
+              <img src="./assets/message.png" alt="" />
+              Subscribe
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- About Section -->
+    <section class="mt-20 text-center px-4">
+      <h1 class="text-3xl md:text-4xl font-bold">About the Podcast</h1>
+
+      <p class="text-gray-300 max-w-[1200px] mx-auto mt-6">
+        TechWave is your go-to podcast for staying ahead in the fast-paced world
+        of technology. We break down complex topics into digestible insights,
+        explore productivity strategies that actually work, and share stories of
+        personal growth from industry leaders.
+      </p>
+
+      <p class="mt-4">
+        Join thousands of young professionals and tech <br />
+        enthusiasts who start their day with TechWave.
+      </p>
+    </section>
   </body>
 </html>
