Why Chose TechWave

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <body class="bg-[#1A0B2E] text-white">
     <!-- Navbar -->
-    <nav class="flex justify-between items-center px-5 md:px-[200px] py-6">
+    <nav class="flex justify-between items-center px-5 md:px-[200px]  py-6">
       <h1 class="font-bold text-2xl md:text-3xl">
         Tech
         <span
@@ -117,5 +117,120 @@
         enthusiasts who start their day with TechWave.
       </p>
     </section>
+
+    <!--  Why Choose TechWave -->
+
+    <section
+      class="grid grid-cols-2 md:grid-cols-4 justify-items-center mt-5 md:mt-20 md:px-[150px]"
+    >
+      <div>
+        <h1
+          class="text-4xl md:text-5xl mt-10 md:mt-10 font-extrabold text-[#00FF88]"
+        >
+          150K+
+        </h1>
+        <p class="text-xl">Monthly Listeners</p>
+      </div>
+      <div>
+        <h1
+          class="text-4xl md:text-5xl mt-10 md:mt-10 font-extrabold text-[#00FF88]"
+        >
+          200+
+        </h1>
+        <p class="text-xl">Episodes Published</p>
+      </div>
+      <div>
+        <h1
+          class="text-4xl md:text-5xl mt-10 md:mt-10 font-extrabold text-[#00FF88]"
+        >
+          4.9★
+        </h1>
+        <p class="text-xl">Average Rating</p>
+      </div>
+      <div>
+        <h1
+          class="text-4xl md:text-5xl mt-10 md:mt-10 font-extrabold text-[#00FF88]"
+        >
+          50+
+        </h1>
+        <p class="text-xl">Industry Experts</p>
+      </div>
+    </section>
+
+    <!-- Challenging Sections  -->
+    <section class="md:px-[150px] rounded-lg">
+      <h1
+        class="text-center text-[32px] md:text-[48px] font-bold mt-10 md:mt-32 mb-4 md:mb-10"
+      >
+        Why Choose TechWave
+      </h1>
+      <div>
+        <div
+          class="grid grid-cols-1 md:grid-cols-3 md:grid-rows-3 gap-5 bg-[#230E3D] px-5 py-5 text-white"
+        >
+          <div
+            class="row-span-2 shadow-xl bg-[#351165] rounded-xl px-[40px] w-full"
+          >
+            <img
+              class="mt-10 md:mt-28 mb-4"
+              src="./assets/headphone.png"
+              alt=""
+            />
+            <h1 class="mb-4 text-2xl font-bold">Premium Audio Quality</h1>
+            <p class="mb-10 text-gray-300">
+              Experience crystal-clear sound with professional-grade recording
+              equipment and expert audio engineering. Every episode is mastered
+              for optimal listening across all devices and platforms.
+            </p>
+          </div>
+          <div
+            class="md:col-span-2 shadow-xl bg-[#351165] rounded-xl px-[40px]"
+          >
+            <img class="mt-10 mb-4" src="./assets/device.png" alt="" />
+            <h1 class="mb-4 text-2xl font-bold">Mobile Friendly</h1>
+            <p class="mb-10 text-gray-300">
+              Experience crystal-clear sound with professional-grade recording
+              equipment and expert audio engineering. Every episode is mastered
+              for optimal listening across all devices and platforms.
+            </p>
+          </div>
+          <div
+            class="md:col-span-2 shadow-xl bg-[#351165] rounded-xl px-[40px]"
+          >
+            <img class="mt-10 mb-4" src="./assets/location.png" alt="" />
+            <h1 class="mb-4 text-2xl font-bold">Global Community</h1>
+            <p class="mb-10 text-gray-300">
+              Experience crystal-clear sound with professional-grade recording
+              equipment and expert audio engineering. Every episode is mastered
+              for optimal listening across all devices and platforms.
+            </p>
+          </div>
+          <div
+            class="md:col-span-2 shadow-xl bg-[#351165] rounded-xl px-[40px]"
+          >
+            <img class="mt-10 mb-4" src="./assets/zap-fast.png" alt="" />
+            <h1 class="mb-4 text-2xl font-bold">Premium Audio Quality</h1>
+            <p class="mb-10 text-gray-300">
+              Experience crystal-clear sound with professional-grade recording
+              equipment and expert audio engineering. Every episode is mastered
+              for optimal listening across all devices and platforms.
+            </p>
+          </div>
+          <div
+            class="md:col-span-1 shadow-xl bg-[#351165] rounded-xl px-[40px]"
+          >
+            <img class="mt-10 mb-4" src="./assets/resource.png" alt="" />
+            <h1 class="mb-4 text-2xl font-bold">Premium Audio Quality</h1>
+            <p class="mb-10 text-gray-300">
+              Experience crystal-clear sound with professional-grade recording
+              equipment and expert audio engineering. Every episode is mastered
+              for optimal listening across all devices and platforms.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+   
   </body>
 </html>
