--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Responsive Design</title>
   </head>
 
-  <body class="bg-[#1A0B2E] text-white">
+  <body class="bg-[#1A0B2E] text-white ">
     <!-- Navbar -->
     <nav class="flex justify-between items-center px-5 md:px-[200px]  py-6">
       <h1 class="font-bold text-2xl md:text-3xl">
@@ -102,7 +102,7 @@
     </section>
 
     <!-- About Section -->
-    <section class="mt-20 text-center px-4">
+    <section class=" text-center px-4 md:px-[200px] ">
       <h1 class="text-3xl md:text-4xl font-bold">About the Podcast</h1>
 
       <p class="text-gray-300 max-w-[1200px] mx-auto mt-6">
