add video sections

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <title>Responsive Design</title>
   </head>
 
-  <body class="bg-[#1A0B2E] text-white ">
+  <body class="bg-[#1A0B2E] text-white">
     <!-- Navbar -->
-    <nav class="flex justify-between items-center px-5 md:px-[200px]  py-6">
+    <nav class="flex justify-between items-center px-5 md:px-[200px] py-6">
       <h1 class="font-bold text-2xl md:text-3xl">
         Tech
         <span
@@ -102,7 +102,7 @@
     </section>
 
     <!-- About Section -->
-    <section class=" text-center px-4 md:px-[200px] ">
+    <section class="text-center px-4 md:px-[200px]">
       <h1 class="text-3xl md:text-4xl font-bold">About the Podcast</h1>
 
       <p class="text-gray-300 max-w-[1200px] mx-auto mt-6">
@@ -230,7 +230,111 @@
         </div>
       </div>
     </section>
+    <!-- Video Sections -->
+     <h1 class="text-[32px] md:text-[48px] font-bold mt-10 md:mt-32 mb-6 md:mb-10 text-center"> Featured Episodes</h1>
+    <section
+      class="flex flex-col md:flex-row gap-6 justify-center items-center mb-32"
+    >
+      <div class="bg-[#250D44] w-[380px] rounded-3xl shadow-slate-600">
+        <iframe
+          class="rounded-3xl"
+          width="380"
+          height="214"
+          src="https://www.youtube.com/embed/KOutPbKc9UM?si=hSrUGhba_kkuzVuE"
+          title="YouTube video player"
+          frameborder="0"
+          allow="
+            accelerometer;
+            autoplay;
+            clipboard-write;
+            encrypted-media;
+            gyroscope;
+            picture-in-picture;
+            web-share;
+          "
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+        <div class="px-6 mt-2 mb-2">
+          <h1 class="text-2xl font-bold">The Future of AI in Everyday Life</h1>
+          <p>
+            Exploring how artificial intelligence is transforming our daily
+            routines and what to expect in the next decade.
+          </p>
+          <p class="flex items-center gap-2 mb-6">
+            <span><img src="./assets/clock.png" alt="" /></span>42 min
+          </p>
+        </div>
+      </div>
 
-   
+      <div class="bg-[#250D44] w-[380px] rounded-3xl shadow-slate-600 mt-4">
+        <iframe
+          class="rounded-3xl"
+          width="380"
+          height="214"
+          src="https://www.youtube.com/embed/KOutPbKc9UM?si=hSrUGhba_kkuzVuE"
+          title="YouTube video player"
+          frameborder="0"
+          allow="
+            accelerometer;
+            autoplay;
+            clipboard-write;
+            encrypted-media;
+            gyroscope;
+            picture-in-picture;
+            web-share;
+          "
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+        <div class="px-6 mt-2 mb-2">
+          <h1 class="text-2xl font-bold">
+            Building Better Habits for Remote Work
+          </h1>
+          <p>
+            Practical strategies for staying productive and maintaining
+            work-life balance in a remote environment.
+          </p>
+          <p class="flex items-center gap-2 mb-6">
+            <span><img src="./assets/clock.png" alt="" /></span>35 min
+          </p>
+        </div>
+      </div>
+
+      <div class="bg-[#250D44] w-[380px] rounded-3xl shadow-slate-600 mt-4">
+        <iframe
+          class="rounded-3xl"
+          width="380"
+          height="214"
+          src="https://www.youtube.com/embed/KOutPbKc9UM?si=hSrUGhba_kkuzVuE"
+          title="YouTube video player"
+          frameborder="0"
+          allow="
+            accelerometer;
+            autoplay;
+            clipboard-write;
+            encrypted-media;
+            gyroscope;
+            picture-in-picture;
+            web-share;
+          "
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+        <div class="px-6 mt-2 mb-2">
+          <h1 class="text-2xl font-bold">Career Growth in Tech: A Roadmap</h1>
+          <p>
+            Expert advice on navigating your tech career from junior developer
+            to senior leadership roles.
+          </p>
+          <p class="flex items-center gap-2 mb-6 ">
+            <span><img src="./assets/clock.png" alt="" /></span>51 min
+          </p>
+        </div>
+      </div>
+    </section>
+
+    
+
   </body>
 </html>
